# driftnote

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Containerfile  Implementation.md  Makefile  README.md  podman-compose.dev.yml  pyproject.toml
.github/workflows/: build-image.yml  ci.yml  cleanup-images.yml
config/: config.dev.toml  config.example.toml
deploy/: README.md  driftnote-backup-failure.service  driftnote-backup.service  driftnote-backup.timer  driftnote.container
docs/: runbook.md
docs/superpowers/plans/: 2026-05-06-driftnote-implementation.md  2026-05-09-issue-2-prompt-body-fix.md  2026-05-09-issue-3-admin-dev-buttons.md  2026-05-09-issue-4-dark-redesign.md  2026-05-09-issue-5-rpi-deployment-guide.md  2026-05-09-issue-6-photo-orientation.md  2026-05-09-issue-7-quote-stripping.md  2026-05-09-issue-8-housekeeping.md  (+6 more)
scripts/: alert-email.py  backup.sh  podman-remote.sh
src/driftnote/: __init__.py  alerts.py  app.py  bootstrap.py  cli.py  config.py  db.py  logging.py  models.py
tests/: conftest.py
tests/integration/: conftest.py  test_app_full.py  test_cli.py  test_digest_jobs.py  test_healthz.py  test_ingest_pipeline.py  test_mail_fixture_smoke.py  test_mail_imap.py  test_mail_smtp.py  test_scheduler_poll_job.py  test_scheduler_prompt_job.py  test_web_routes_browse.py  test_web_routes_edit.py  test_web_routes_health.py  test_web_routes_media_and_admin.py
tests/unit/: test_alerts.py  test_bootstrap.py  test_config.py  test_db.py  test_digest_monthly.py  test_digest_monthly_render.py  test_digest_moodboard.py  test_digest_weekly.py  test_digest_yearly.py  test_filesystem_layout.py  test_filesystem_locks.py  test_filesystem_markdown_io.py  test_ingest_attachments.py  test_ingest_parse.py  test_logging.py  test_mail_imap.py  test_mail_transport.py  test_models.py  test_repository_entries.py  test_repository_ingested.py  test_repository_jobs.py  test_repository_media.py  test_scheduler_disk_job.py  test_scheduler_runner.py  test_web_auth.py  test_web_banners.py  test_web_cloud.py
(+65 files in other folders)
